<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mapp</string>
    <string name="savebutton">Save</string>
    <string name="cancelbutton">Cancel</string>
    <string name="logoutbutton">Log out</string>
    <string name="loginbutton">Start using Mapp</string>
    <string name="registerbutton">Register</string>
    <string name="okbutton">OK</string>
    <string name="underconstruction">This feature is still under construction.\nCheck back soon!</string>
    
    <string name="meta_activitylabel">Polygon Properties</string>
    <string name="meta_namelabel">Polygon name</string>
    <string name="meta_descriptionlabel">Polygon description</string>
    <string name="meta_colorlabel">Polygon color</string>
    <string name="meta_colortip">(Tap to change)</string>
    <string name="meta_name_hint">Name</string>
    <string name="meta_description_hint">Description</string>
    <string name="meta_deletebutton">Delete Polygon</string>
    <string name="meta_deletedialogtitle">Delete Polygon</string>
    <string name="meta_deletedialogtext">Are you sure you want to delete the polygon?</string>
    <string name="meta_deleteyesbutton">Yes</string>
    <string name="meta_deletenobutton">No</string>
    
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_invites">Invites</string>
    
    <string name="settings_activitylabel">Settings</string>
    <string name="settings_map">Map mode</string>
    <string name="settings_satellite">Satellite mode</string>
    <string name="settings_mapmodelabel">Map display preferences</string>
    <string name="settings_syncintervallabel">Synchronization interval</string>
    <string name="settings_zoomcontrolbox">Enable zooming buttons</string>
    
    <string name="invites_activitylabel">Invites</string>
    
    <string name="groups_activitylabel">Groups</string>
    <string name="groups_label">Your groups:</string>
    <string name="groups_newgroupbutton">Create a new group</string>
    
    <string name="groupadmin_groupname">Group name</string>
    <string name="groupadmin_newmemberlabel">Add group member</string>
    <string name="groupadmin_memberslabel">Members</string>
    <string name="groupadmin_newmember_hint">Email address</string>
    <string name="groupadmin_togroupbutton">Load group on map</string>
    <string name="groupadmin_saveandexit">Save but don\'t load</string>
    <string name="groupadmin_addmember">Add</string>
    
    <string name="invite_dialogtitle">Invite</string>
    <string name="invite_dialogtext">Do you want to accept or decline this invite?</string>
    <string name="invite_positivebutton">Accept</string>
    <string name="invite_negativebutton">Decline</string>
    <string name="invite_noinvites">No invites available</string>
    
    <string name="account_activitylabel">Account</string>
    
    <string name="login_email_hint">E-mail address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_text">If you do not have an account yet,\nfill in the above and we\'ll create one for you</string>
    
</resources>
