<?xml version="1.0" encoding="utf-8"?>
<!-- @author Joost -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	style="@style/MetaBodyLayout">
	<ScrollView
		android:id="@+id/scrollview"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		xmlns:android="http://schemas.android.com/apk/res/android">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  			android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:paddingTop="5sp">
			<TextView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/namelabelview"
				style="@style/Label"
				android:text="@string/meta_namelabel" />
			<EditText android:id="@+id/edtInputName"
				style="@style/TextInput"
				android:hint="@string/meta_name_hint" />
			<View style="@style/MediumSeparator" />
			<TextView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/descriptionlabelview"
				style="@style/Label"
				android:text="@string/meta_descriptionlabel" />
			<EditText android:id="@+id/edtInputDescription"
				style="@style/BigTextInput"
				android:hint="@string/meta_description_hint" />	
			<View style="@style/MediumSeparator" />
			<TextView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/colorlabelview"
				style="@style/Label"
				android:text="@string/meta_colorlabel" />
			<LinearLayout
				android:id="@+id/colorpickerlayout"
				style="@style/ColorpickerLayout"/>
			<View style="@style/BottomSeparator" />
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_alignParentBottom="true">
				<Button android:id="@+id/savebutton"
					style="@style/Button"
		            android:text="@string/savebutton" />
		        <Button android:id="@+id/cancelbutton"
					style="@style/Button"
		            android:text="@string/cancelbutton" />
		   	</LinearLayout>
		    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_alignParentBottom="true">
				<Button android:id="@+id/deletebutton"
					style="@style/DeleteButton"
			        android:text="@string/meta_deletebutton" />
			</LinearLayout>
		</LinearLayout>
   	</ScrollView>
</LinearLayout>

